src/test/success/variable_assignment.egern
var a = 4
print(a)
a = 6
print(a)
