src/test/fail/boolean_operations_on_integers_fail.egern
print(3 && true)
print(true && 3)
print(3 && 4)

print(3 || true)
print(true || 3)
print(3 || 4)

print(!3)
